[project]
name = "bpsentry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastparquet>=2025.12.0",
    "logging>=0.4.9.6",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "psycopg2>=2.9.11",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.48",
    "xlrd>=2.0.2",
]
[tool.setuptools.packages.find]
where = ["."]